--- a/partout/Frontend/src/styles/Content.css
+++ b/partout/Frontend/src/styles/Content.css
@@ -2,5 +2,5 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    min-height: 100vh;
+    min-height: calc(100vh - 117px);
 }
