--- a/partout/Frontend/src/styles/Home.css
+++ b/partout/Frontend/src/styles/Home.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 100vh;
+    min-height: calc(100vh - 117px);
 }
 
 .homepage-image-container {
