--- a/partout/Frontend/src/styles/Login.css
+++ b/partout/Frontend/src/styles/Login.css
@@ -29,7 +29,7 @@
 }
 
 .fill-screen {
-    height: 100vh;
+    min-height: calc(100vh - 117px);
 }
 
 .div-login {
