--- a/partout/Frontend/src/styles/Profile.css
+++ b/partout/Frontend/src/styles/Profile.css
@@ -1,5 +1,5 @@
 .profile-page {
-    height: 100%;
+    min-height: calc(100vh - 117px);
     align-content: center;
 }
 
