--- a/partout/Frontend/src/styles/Users.css
+++ b/partout/Frontend/src/styles/Users.css
@@ -1,11 +1,12 @@
 .user-container {
     display: flex;
-    height: 100%;
+    min-height: calc(100vh - 117px);
     width: 100%;
     justify-content: center;
 }
 
 .center-user-container {
+    overflow-x: scroll;
     width: 80%;
     max-width: 750px;
     align-content: center;
